# duygu-analizi

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  data_processor.py  feature_extraction.py  interface.py  models.py
