[project]
name = "duygu-analizi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "textual>=3.4.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "wordcloud>=1.9.4",
]
